added docker file to simple service